# dbt-police-data

./: .gitignore  .pre-commit-config.yaml  .user.yml  README.md  dbt_project.yml  main.tf  profiles.yml  pyproject.toml  variables.tf
experimentation/: llm_playground.py  playground.py  searches_playground.py
geojsons/: kml_to_geojson.py  read_gpd.py
models/: get_stop_search.py  get_workforce_by_ethnicity.py  schema.yml
models/int/: int_clean_wikipedia_forces.py  join_forces.sql
models/marts/forces/: _marts__forces.yml  forces.sql
models/staging/api/: _api__models.yml  stg_api__stop_search.py
models/staging/csv/: _csv__models.yml
models/staging/wikipedia/: _wikipedia__modesl.yml  stg_wikipedia__forces.py
