[tool.poetry]
name = "data-science-repo-template-v2"
version = "0.1.0"
description = ""
authors = ["tom-burdge <tomburdge@wessexinsights.com>"]
readme = "README.md"
packages = [{include = "data_science_repo_template_v2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-duckdb = {extras = ["deltalake"], version = "^1.7.0"}
polars = "^0.19.13"
requests = "^2.31.0"
pyarrow = "^14.0.1"
bs4 = "^0.0.1"
pandas = "^2.1.3"
lxml = "^4.9.3"
tqdm = "^4.66.1"
shapely = "^2.0.2"
geopandas = "^0.14.1"
fiona = "^1.9.5"
kml2geojson = "^5.1.0"
geojson = "^3.1.0"
matplotlib = "^3.8.2"
gcsfs = "^2023.10.0"
functime = {extras = ["llm"], version = "^0.9.1"}
lightgbm = "^4.1.0"
deltalake = "^0.13.0"
flaml = "^2.1.1"
xgboost = "^2.0.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.284"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
nbqa = "^1.7.0"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
